tests/should_fail/bug/1610-crash.stderr
error[E0277]: the trait bound `P: creusot_std::prelude::IteratorSpec` is not satisfied
 --> 1610-crash.rs:9:5
  |
9 |     fn next(&mut self) -> Option<Self::Item> {
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `creusot_std::prelude::IteratorSpec` is not implemented for `P`
 --> 1610-crash.rs:5:1
  |
5 | pub struct P();
  | ^^^^^^^^^^^^
  = help: the following other types implement trait `creusot_std::prelude::IteratorSpec`:
            &mut I
            creusot_std::logic::fmap::Iter<K, V>
            creusot_std::logic::seq::Iter<T>
            creusot_std::std::iter::MapInv<I, F>
            std::array::IntoIter<T, N>
            std::collections::hash_map::IntoIter<K, V, A>
            std::collections::hash_map::Iter<'a, K, V>
            std::collections::hash_map::IterMut<'a, K, V>
          and 27 others

error[E0277]: the trait bound `P: creusot_std::prelude::IteratorSpec` is not satisfied
  --> 1610-crash.rs:13:5
   |
13 |     fn collect<B: FromIterator<Self::Item>>(self) -> B {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `creusot_std::prelude::IteratorSpec` is not implemented for `P`
  --> 1610-crash.rs:5:1
   |
 5 | pub struct P();
   | ^^^^^^^^^^^^
   = help: the following other types implement trait `creusot_std::prelude::IteratorSpec`:
             &mut I
             creusot_std::logic::fmap::Iter<K, V>
             creusot_std::logic::seq::Iter<T>
             creusot_std::std::iter::MapInv<I, F>
             std::array::IntoIter<T, N>
             std::collections::hash_map::IntoIter<K, V, A>
             std::collections::hash_map::Iter<'a, K, V>
             std::collections::hash_map::IterMut<'a, K, V>
           and 27 others

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
